--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [windows-2019, macos-10.15, ubuntu-20.04]
+        os: [windows-2019]
     env:
       BUILD_TYPE: Release
     steps:
