--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,10 +29,10 @@ jobs:
           Invoke-WebRequest 'https://download.microsoft.com/download/a/e/7/ae743f1f-632b-4809-87a9-aa1bb3458e31/DXSDK_Jun10.exe' -OutFile DXSDK_Jun10.exe
     
     - name: Install DXSDK
-      run: cmd.exe /c start /wait .\DXSDK_Jun10.exe /U /O /F /S /P "${{ github.workspace }}\DX_SDK"
+      run: cmd.exe /c start /wait .\DXSDK_Jun10.exe /U /O /F /S /P "${{ github.workspace }}\\DX_SDK"
 
     - name: List DXSDK files
-      run: dir /b "${{ github.workspace }}\DX_SDK"
+      run: dir /b "${{ github.workspace }}\\DX_SDK"
       
     - name: Checkout Repo
       uses: actions/checkout@v3
