--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,21 @@ jobs:
     env:
       BUILD_TYPE: Release
     steps:
+    
+    - name: Run as admin
+      run: |
+        $psCommand = 'Start-Process ' + "`"${env:GITHUB_ACTION}`"" + ' -Verb RunAs'
+        Start-Process powershell -Verb RunAs -ArgumentList 'Invoke-Expression', $psCommand
+        Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass
+      shell: powershell
+      
     - name: Install DirectX SDK
       shell: powershell
       if: steps.cache.outputs.cache-hit != 'true'
       run: |
           choco install directx-sdk -y
           Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
+          
     - name: Cache DirectX SDK
       uses: actions/cache@v3
       with:
@@ -27,12 +36,14 @@ jobs:
       if: steps.cache.outputs.cache-hit != 'true'
       run: |
           Invoke-WebRequest 'https://download.microsoft.com/download/a/e/7/ae743f1f-632b-4809-87a9-aa1bb3458e31/DXSDK_Jun10.exe' -OutFile DXSDK_Jun10.exe
-    
+      
     - name: Install DXSDK
       run: cmd.exe /c start /wait .\DXSDK_Jun10.exe /U /O /F /S /P "${{ github.workspace }}\\DX_SDK"
-
+      shell: powershell
+      
     - name: List DXSDK files
       run: dir /b "${{ github.workspace }}\\DX_SDK"
+      shell: powershell
       
     - name: Checkout Repo
       uses: actions/checkout@v3
