--- a/cmake.toml
+++ b/cmake.toml
@@ -6,3 +6,12 @@ name = "cmkr_for_beginners"
 type = "executable"
 sources = ["src/main.cpp"]
 compile-features = ["cxx_std_20"]
+
+cmake-before = """
+find_path(DXSDK_INCLUDE_DIR d3d9.h PATHS "${DXSDK_DIR}/Include")
+if (NOT DXSDK_INCLUDE_DIR)
+    message(FATAL_ERROR "DirectX SDK is not installed. Please install the DirectX SDK and set the DXSDK_DIR environment variable.")
+else()
+    message(STATUS "DirectX SDK found at: ${DXSDK_INCLUDE_DIR}")
+endif()
+"""
