--- a/cmake.toml
+++ b/cmake.toml
@@ -15,4 +15,6 @@ if (NOT DXSDK_INCLUDE_DIR)
 else()
     message(STATUS "DirectX SDK found at: ${DXSDK_INCLUDE_DIR}")
 endif()
+link_directories("${DXSDK_DIR}Lib\\\\x64")
+include_directories("${DXSDK_DIR}Include")
 """
