--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,12 +29,12 @@ project(cmkr_for_beginners)
 # Target: hello_world
 set(CMKR_TARGET hello_world)
 message(STATUS "DXSDK_DIR at: ${DXSDK_DIR}")
-find_path(DXSDK_INCLUDE_DIR d3d9.h PATHS "${DXSDK_DIR}\\Include")
-if (NOT DXSDK_INCLUDE_DIR)
-    message(FATAL_ERROR "DirectX SDK is not installed. Please install the DirectX SDK and set the DXSDK_DIR environment variable.")
-else()
-    message(STATUS "DirectX SDK found at: ${DXSDK_INCLUDE_DIR}")
-endif()
+#find_path(DXSDK_INCLUDE_DIR d3d9.h PATHS "${DXSDK_DIR}\\Include")
+#if (NOT DXSDK_INCLUDE_DIR)
+#    message(FATAL_ERROR "DirectX SDK is not installed. Please install the DirectX SDK and set the DXSDK_DIR environment variable.")
+#else()
+#    message(STATUS "DirectX SDK found at: ${DXSDK_INCLUDE_DIR}")
+#endif()
 link_directories("${DXSDK_DIR}\\Lib\\x64")
 include_directories("${DXSDK_DIR}\\Include")
 
