--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,10 @@ jobs:
     - name: Build
       run: |
         cmake -B build -DDXSDK_DIR="${{ github.workspace }}\DX_SDK" -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+        cmake --build build --config ${{ env.BUILD_TYPE }} --parallel
         
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: xxx-${{ matrix.os }}
+        path: build/Release
