--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       
     - name: Build
       run: |
-        cmake -B build -DDXSDK_DIR="%DXSDK_PATH%" -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+        cmake -B build -DDXSDK_DIR=%DXSDK_PATH% -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
         cmake --build build --config ${{ env.BUILD_TYPE }} --parallel
         
     - name: Upload artifacts
