--- a/cmake.toml
+++ b/cmake.toml
@@ -9,12 +9,6 @@ compile-features = ["cxx_std_20"]
 
 cmake-before = """
 message(STATUS "DXSDK_DIR at: ${DXSDK_DIR}")
-#find_path(DXSDK_INCLUDE_DIR d3d9.h PATHS "${DXSDK_DIR}\\\\Include")
-#if (NOT DXSDK_INCLUDE_DIR)
-#    message(FATAL_ERROR "DirectX SDK is not installed. Please install the DirectX SDK and set the DXSDK_DIR environment variable.")
-#else()
-#    message(STATUS "DirectX SDK found at: ${DXSDK_INCLUDE_DIR}")
-#endif()
-link_directories("${DXSDK_DIR}\\\\Lib\\\\x64")
-include_directories("${DXSDK_DIR}\\\\Include")
+link_directories(${DXSDK_DIR}\\\\Lib\\\\x64)
+include_directories(${DXSDK_DIR}\\\\Include)
 """
